[workspace]
members = [
  "playground",
  ".",
]

[package]
name = "rupl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.0"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
thiserror = "1.0.38"
